# 2d_game_cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
data/: level_1
libs/yagm/: CMakeLists.txt
libs/yagm/include/engine/: AssetManager.hpp  FString.hpp  Font.hpp  IMGUI.hpp  IScene.hpp  Log.hpp  Music.hpp  Texture.hpp  Video.hpp  Window.hpp
libs/yagm/src/: AssetManager.cpp  Font.cpp  GameLoop.cpp  IScene.cpp  Log.cpp  Music.cpp  Texture.cpp  Video.cpp
scripts/: level0.lua  level1.lua
src/: AssetManager.cpp  AssetManager.hpp  Collision.cpp  Collision.hpp  Colors.hpp  Components.hpp  Config.hpp  Enemy.cpp  Enemy.hpp  Entities.cpp  Entities.hpp  Events.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  GameScene.cpp  GameScene.hpp  Gamepad.cpp  Gamepad.hpp  HUD.cpp  HUD.hpp  IMGUI.cpp  IMGUI.hpp  LevelData.hpp  LuaContext.cpp  LuaContext.hpp  LuaState.cpp  LuaState.hpp  Player.cpp  Player.hpp  Script.cpp  Script.hpp  Texture.cpp  Texture.hpp  Video.cpp  Video.hpp  Window.cpp  Window.hpp  main.cpp
src/engine/: AssetManager.cpp  AssetManager.hpp  Font.cpp  Font.hpp  GameLoop.cpp  GameLoop.hpp  Gamepad.hpp  IMGUI.cpp  IMGUI.hpp  IScene.cpp  IScene.hpp  Log.cpp  Log.hpp  Music.cpp  Music.hpp  Video.cpp  Video.hpp  Window.hpp
src/scenes/: GamePlayScene.cpp  GamePlayScene.hpp  IScene.hpp  IntroScene.cpp  IntroScene.hpp  PauseScene.cpp  PauseScene.hpp
src/systems/: CleanUpSystem.cpp  CleanUpSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  LevelLoaderSystem.cpp  LevelLoaderSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp  TextSystem.cpp  TextSystem.hpp
src/widgets/: ButtonWidget.cpp  ButtonWidget.hpp  Widget.hpp  WidgetContainer.cpp  WidgetContainer.hpp
